--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -5,10 +5,13 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
+<!--  TODO refernec header resource for the calendar-->
+
   <com.kizitonwose.calendar.view.CalendarView
     android:id="@+id/calendar"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
+    app:cv_scrollPaged="true"
     android:layout_margin="@dimen/half_dynamic_spacing"
     app:cv_dayViewResource="@layout/day_calendar"
     app:layout_constraintTop_toTopOf="parent"
