--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -9,11 +9,12 @@
 
   <com.kizitonwose.calendar.view.CalendarView
     android:id="@+id/calendar"
-    android:layout_width="0dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cv_scrollPaged="true"
     android:layout_margin="@dimen/half_dynamic_spacing"
     app:cv_dayViewResource="@layout/day_calendar"
+    app:cv_monthHeaderResource="@layout/header_calendar"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
